--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/jmolina9596/Homework-1/issues"
   },
-  "homepage": "https://github.com/jmolina9596/Homework-1#readme"
+  "homepage": "https://github.com/jmolina9596/Homework-1#readme",
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
