--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/jmolina9596/Homework-1#readme",
   "dependencies": {
     "express": "^4.16.2"
-  }
+  },
+
+  "engines": {
+    "node": "9.4.0"
+}
 }
